# mcp-gateway-production-patterns

./: .flake8  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  latency_comparison.py
docker/: Dockerfile
examples/: __init__.py  federation_demo.py  hitl_demo.py  multi_tenant_server.py
patterns/: __init__.py  federation.py  human_in_the_loop.py  secret_vaulting.py  tool_sandboxing.py  zero_trust_gateway.py
tests/: test_federation.py  test_human_in_the_loop.py  test_secret_vaulting.py  test_tool_sandboxing.py  test_zero_trust_gateway.py
