[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway-production-patterns"
version = "0.1.0"
description = "Production patterns for secure multi-tenant MCP gateways: Zero-Trust, federation, HITL, sandboxing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.12.0",
    "fastmcp>=3.0.0",
    "redis>=6.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
vault = [
    "hvac>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "bandit>=1.8.0",
    "safety>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["patterns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "PERF", "PTH", "SIM", "RUF", "TRY", "EM", "TC", "PD", "S", "N"]
ignore = ["ANN", "D", "ERA", "T20", "COM812", "ISC001", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "SLF001", "BLE001", "PLC0415", "S603", "S105", "S106", "S108", "F841", "ARG002", "RUF059", "PTH118", "PTH120"]
"benchmarks/*" = ["S101", "PLR2004", "S108", "PLC0415"]
"examples/*" = ["S104", "T201", "PLC0415", "S106"]
"patterns/*" = ["S105", "S106", "S108", "PLR2004", "UP042", "ASYNC109", "PYI034", "SLF001", "SIM105", "S110", "PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "benchmarks.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
